--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -3,6 +3,8 @@
   background: var(--background-dark);
   padding: 50px 0;
   text-align: center;
+  touch-action: pan-y; /* Дозволяємо вертикальний скрол */
+  -webkit-overflow-scrolling: touch; /* Покращуємо скрол на iOS */
 }
 
 .worked-with {
@@ -28,13 +30,13 @@
 }
 
 .logo {
-  background: rgba(90, 110, 220, 0.15); /* Новий фон для темного режиму */
+  background: rgba(90, 110, 220, 0.15);
   background: linear-gradient(
     145deg,
     rgba(90, 110, 220, 0.15),
     rgba(60, 80, 200, 0.1)
-  ); /* Легкий градієнт */
-  color: #d1d1d1; /* Світліший текст */
+  );
+  color: #d1d1d1;
   padding: 15px 25px;
   border-radius: 30px;
   display: inline-flex;
@@ -44,7 +46,7 @@
   font-size: 1rem;
   transition: transform 0.3s, background 0.3s, box-shadow 0.3s;
   animation: slideUp 1.5s ease-in-out backwards;
-  box-shadow: 0 2px 8px rgba(100, 120, 255, 0.2); /* Легка тінь */
+  box-shadow: 0 2px 8px rgba(100, 120, 255, 0.2);
 }
 
 .logo img {
@@ -54,9 +56,9 @@
 }
 
 .logo:hover {
-  background: rgba(100, 120, 255, 0.3); /* Яскравіший фон при наведенні */
+  background: rgba(100, 120, 255, 0.3);
   transform: scale(1.2);
-  box-shadow: 0 4px 12px rgba(100, 120, 255, 0.4); /* Посилена тінь при наведенні */
+  box-shadow: 0 4px 12px rgba(100, 120, 255, 0.4);
 }
 
 .logo img:hover {
@@ -91,7 +93,6 @@
   background: rgba(255, 255, 255, 0.05);
   border-radius: 10px;
   box-shadow: 0 2px 10px rgb(255, 255, 255, 0.3);
-  animation: slideUp 1.5s ease-in-out backwards;
 }
 
 .skill-detail-item:hover {
@@ -104,7 +105,6 @@
   justify-content: flex-start;
   margin-right: auto;
   margin-left: 200px;
-  animation: slideInLeft 1.5s ease-in-out backwards;
 }
 
 .skill-detail-item.right {
@@ -112,7 +112,6 @@
   justify-content: flex-end;
   margin-left: auto;
   margin-right: 200px;
-  animation: slideInRight 1.5s ease-in-out backwards;
 }
 
 .skill-detail-logo {
